--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "peerDependencies": {
-    "react": ">15.4.2 <17.0.0",
-    "react-dom": ">15.4.2 <17.0.0"
+    "react": ">18.0.0",
+    "react-dom": ">18.0.0"
   },
   "files": [
     "dist/**/*"
@@ -70,12 +70,12 @@
     "coveralls": "^2.11.9",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "~17.1.0",
-    "eslint-config-airbnb-base": "~13.1.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-loader": "^2.1.1",
+    "eslint-loader": "4.0.2",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.1.2",
